# total-agent-memory

./: .dockerignore  .gitignore  .last-requirements.sha256  CHANGELOG.md  CLAUDE.md.template  Dockerfile  LAUNCH.md  LICENSE  README.md  SYSTEM-OVERVIEW.md  agent-rules.md.template  docker-compose.yml  global-rules.md.template  install-codex.ps1  install-codex.sh  install-docker.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.sh  update.sh
.github/: FUNDING.yml
claude_total_memory/: __init__.py  lookup.py  server.py
codex-skill/agents/: openai.yaml
docker/: reflection_daemon.py  run-mcp.sh
docs/: vs-competitors.md
evals/: longmemeval-2026-04-17.json  results-2026-04-17.json
evals/scenarios/: prevention_core.json  recall_core.json
examples/: README.md
examples/hooks/: on-bash-error.sh  pre-edit.sh  session-start-addon.sh
examples/rules/: memory.md
examples/settings/: hooks.fragment.json
hooks/: codex-notify.ps1  memory-trigger.ps1  memory-trigger.sh  on-stop.ps1  on-stop.sh  post-tool-use.ps1  post-tool-use.sh  session-start.ps1  session-start.sh
hooks/lib/: common.sh  memory-nudge.sh
launchagents/: com.claude.memory.check-updates.plist  com.claude.memory.orphan-backfill.plist  com.claude.memory.reflection.plist
migrations/: 008_temporal_kg.sql  009_procedural.sql  010_session_continuity.sql  026_graph_nodes_dedup.sql  027_repr_freshness.sql
scripts/: dashboard-service.sh
src/: analogy.py  auto_episode_capture.py  auto_extract_active.py  auto_self_improve.py  auto_session_save.py  cache_layer.py  config.py  context_expander.py  dashboard.py  deep_enricher.py  enrichment_worker.py  error_capture.py  eval_harness.py  extract_transcript.py  file_context.py  fusion.py  graph_expander.py  migrate_knowledge_to_graph.py  multi_repr_search.py  multi_repr_store.py  paths.py  procedural.py  project_wiki.py  reembed.py  representations.py  representations_queue.py  server.py  session_continuity.py  temporal_kg.py  version.py
src/ast_ingest/: __init__.py  ingester.py
src/graph/: store.py
src/ingestion/: extractor.py  file_watcher.py
src/tools/: backfill_v6.py  brain_health.py  graph_enrichment.py  merge_duplicate_nodes.py  run_reflection.py
systemd/: README.md  claude-memory-dashboard.service  claude-memory-orphan-backfill.service  claude-memory-reflection.path  claude-memory-reflection.service
tests/: conftest.py  test_analogy.py  test_ast_ingest.py  test_config.py  test_dashboard_service.py  test_decay_per_repr.py  test_edge_freshness.py  test_error_capture.py  test_eval_harness.py  test_file_context.py  test_fusion.py  test_graph.py  test_install_codex.py  test_install_ide_flag.py  test_install_linux.py  test_llm_runtime_config.py  test_lookup_cli.py  test_memory_nudge_hook.py  test_merge_duplicate_nodes.py  test_paths_migration.py  test_per_tier_decay.py  test_procedural.py  test_recall_filters.py  test_repr_drift.py  test_session_continuity.py  test_temporal_kg.py
total_agent_memory/: __init__.py  lookup.py  paths.py
