[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-total-memory"
version = "7.0.0"
description = "total-agent-memory — persistent memory MCP server for Claude Code & Codex CLI: 46 tools — knowledge graph, temporal facts, procedural memory, episodic memory, AST ingest, pre-edit guard, auto-consolidating error capture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Vitalii", email = "vitalii@example.com"},
]
keywords = ["claude", "mcp", "memory", "ai", "llm", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/vitaliimacpro/claude-total-memory"
Repository = "https://github.com/vitaliimacpro/claude-total-memory"
Issues = "https://github.com/vitaliimacpro/claude-total-memory/issues"

[project.scripts]
claude-total-memory = "claude_total_memory.server:main_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_total_memory*"]
