[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total-agent-memory"
version = "12.0.0"
description = "Persistent memory MCP server for Claude Code, Codex CLI, Cursor and any MCP client: 46 tools — knowledge graph, temporal facts, procedural memory, episodic memory, AST ingest, pre-edit guard, auto-consolidating error capture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Vitalii Cherepanov", email = "vbcherepanov@gmail.com"},
]
keywords = ["mcp", "memory", "ai", "llm", "claude-code", "codex", "cursor", "agent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.40",
    # v11 D4 LoCoMo — BAAI/bge-reranker-v2-m3 multilingual reranker.
    # Optional at runtime (sentence-transformers CrossEncoder is preferred
    # loader) but required for the FlagReranker fallback path.
    "FlagEmbedding>=1.2.10",
    "peft>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/vbcherepanov/total-agent-memory"
Repository = "https://github.com/vbcherepanov/total-agent-memory"
Issues = "https://github.com/vbcherepanov/total-agent-memory/issues"

[project.scripts]
total-agent-memory = "total_agent_memory.server:main_sync"
tam = "total_agent_memory.server:main_sync"
tam-lookup = "total_agent_memory.lookup:main"
lookup-memory = "total_agent_memory.lookup:main"
# Backward-compat aliases (v11.x users keep working; pip prints a
# DeprecationWarning on first `from claude_total_memory import ...`).
claude-total-memory = "claude_total_memory.server:main_sync"
ctm-lookup = "claude_total_memory.lookup:main"

# Pack the new ``total_agent_memory`` wrapper, the legacy
# ``claude_total_memory`` shim (kept so existing imports keep working with
# a DeprecationWarning) and the heavy ``src/`` runtime. Without ``src*``
# the wrapper falls over with ``Error: server.py not found`` because it
# resolves ``../src/server.py`` relative to itself, which only exists in a
# git checkout — that bug bit v11.2.1 in production.
[tool.setuptools.packages.find]
where = ["."]
include = [
    "total_agent_memory*",
    "claude_total_memory*",
    "src*",
]
exclude = [
    "tests*",
    "benchmarks*",
    "docs*",
    "scripts*",
]

# Ship non-Python sidecar files (SQL migrations, vocabularies, etc.)
# alongside the modules. Without this they vanish in the wheel and the
# server crashes on first migration.
[tool.setuptools.package-data]
src = [
    "**/*.sql",
    "**/*.json",
    "**/*.yaml",
    "**/*.yml",
    "**/*.txt",
]

[tool.pytest.ini_options]
markers = [
    "slow: heavy tests (network/model download); set RUN_RERANKER_SLOW=1 to enable",
]
